--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,13 +1,51 @@
-<!--DOCTYPE html -->
+{% load staticfiles %}
+<!DOCTYPE html>
 <html>
-<head>
-<title>Game shop</title>
+    <head>
+        <meta charset="utf-8">
+        {% block meta_tags %}{% endblock %}
 
-</head>
+        <title>
+            {% block title %} Game shop {% endblock%}
+        </title>
 
-<body>
 
+        {% block stylesheets %}
+            <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}" type="text/css" />
+            <!-- <link rel="stylesheet" href="{% static "css/base.css" %}" type="text/css" /> -->
+        {% endblock %}
 
-</body>
+        <style>
+            /*for custom styling*/
+            {% block style %}{% endblock %}
+        </style>
 
+        {% block javascripts %}
+            <!-- <script src="{% static "js/jquery-1.7.2.min.js" %}" type="text/javascript"></script> -->
+            <script src="{% static "bootstrap/js/bootstrap.min.js" %}" type="text/javascript"></script>
+        {% endblock %}
+
+        {% block extra_head %}{% endblock %}
+
+    </head>
+    <body>
+
+        <div class="container">
+
+            {% block content %}
+
+            {% endblock %}
+
+        </div>
+
+        <!-- {% include "javascript.html" %} -->
+
+        <script>
+            $(document).ready(function(){
+                {% block jquery %}
+                {% endblock %}
+            });
+        </script>
+
+    </body>
 </html>
