--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Game shop</title>
+<title>{{ title }}</title>
 <link rel="stylesheet" href='{% static "css/index.css" %}' />
 </head>
 
@@ -19,10 +19,15 @@ Arcade
 
 <div id="section">
 <h1>London</h1>
-<p>London is the capital city of England. It is the most populous city in the United Kingdom,
-with a metropolitan area of over 13 million inhabitants.</p>
-<p>Standing on the River Thames, London has been a major settlement for two millennia,
-its history going back to its founding by the Romans, who named it Londinium.</p>
+{% for obj in object_list %}
+  {{ obj.title }}<br>
+  {{obj.image}}<br>
+  {{ obj.developer }}<br>
+  {{ obj.publisher }}<br>
+  {{ obj.price }}<br>
+  {{ obj.category }}<br>
+  {{ obj.quantity }}<br>
+{% endfor %}
 </div>
 
 <div id="footer">
