index.html can show image from database

--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -1,13 +1,11 @@
 <style>
-
-#header {
+.header {
     background-color:black;
     color:white;
-    clear:both;
     text-align:center;
     padding:5px;
 }
-#nav {
+.nav {
     line-height:30px;
     background-color:#eeeeee;
     height:300px;
@@ -15,12 +13,13 @@
     float:left;
     padding:5px;
 }
-#section {
-    width:350px;
+.section {
+    width:1000px;
+    background-color:#eeeede;
     float:left;
     padding:10px;
 }
-#footer {
+.footer {
     background-color:black;
     color:white;
     clear:both;
