--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,12 +6,18 @@
         {% block meta_tags %}{% endblock %}
 
         <title>
-            {% block title %} Game shop {% endblock%}
+            {% block title %} Game shop {% endblock %}
         </title>
 
 
         {% block stylesheets %}
-            <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}" type="text/css" />
+            <link rel="stylesheet" href='{% static "css/base.css" %}' />
+            <!-- Latest compiled and minified CSS -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+            <!-- Optional theme -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+            <!-- <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}" type="text/css" />-->
             <!-- <link rel="stylesheet" href="{% static "css/base.css" %}" type="text/css" /> -->
         {% endblock %}
 
@@ -20,32 +26,46 @@
             {% block style %}{% endblock %}
         </style>
 
-        {% block javascripts %}
-            <!-- <script src="{% static "js/jquery-1.7.2.min.js" %}" type="text/javascript"></script> -->
-            <script src="{% static "bootstrap/js/bootstrap.min.js" %}" type="text/javascript"></script>
-        {% endblock %}
 
-        {% block extra_head %}{% endblock %}
 
     </head>
     <body>
 
-        <div class="container">
+        <div class="header">
 
-            {% block content %}
+            {% block header %}
+              <h1 style="background-color:black;color:white;text-align:center;padding:5px;">Game Shop</h1>
+            {% endblock %}
 
+        </div>
+
+        <div class="nav">
+
+            {% block nav %}
+
+            {% endblock %}
+
+        </div>
+
+        <div class="section">
+
+            {% block section %}
+
+            {% endblock %}
+
+        </div>
+
+        <div class="footer">
+
+            {% block footer %}
+              Copyright © habijabi.com
             {% endblock %}
 
         </div>
 
         <!-- {% include "javascript.html" %} -->
 
-        <script>
-            $(document).ready(function(){
-                {% block jquery %}
-                {% endblock %}
-            });
-        </script>
-
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     </body>
 </html>
