--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         {% block meta_tags %}{% endblock %}
 
         <title>
@@ -11,61 +12,124 @@
 
 
         {% block stylesheets %}
-            <link rel="stylesheet" href='{% static "css/base.css" %}' />
+          <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+          <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+          <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+          <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+
+            <!--<link rel="stylesheet" href='{% static "css/base.css" %}' />-->
             <!-- Latest compiled and minified CSS -->
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+            <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
 
             <!-- Optional theme -->
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+            <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">-->
             <!-- <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}" type="text/css" />-->
             <!-- <link rel="stylesheet" href="{% static "css/base.css" %}" type="text/css" /> -->
         {% endblock %}
 
         <style>
             /*for custom styling*/
-            {% block style %}{% endblock %}
+            {% block style %}
+              html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+              .w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
+            {% endblock %}
         </style>
-
-
-
     </head>
-    <body>
 
-        <div class="header">
+    <body class="w3-light-grey w3-content" style="max-width:1600px">
+      <!-- Sidenav/menu -->
+      <nav class="w3-sidenav w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;"><br>
+        <div class="w3-container">
+          <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding" title="close menu">
+          <i class="fa fa-remove"></i>
+          </a>
+          <img src='{% static "img/GS.png" %}' alt="logo" style="width:45%;" class="w3-round"><br><br>
+          <h4 class="w3-padding-0"><font color="#33cc33"><b>GameShop</b></font></h4>
+          <!--<p class="w3-text-grey">Template by W3.CSS</p>-->
+        </div>
+        {% block navContent %}
+          <a href="#" class="w3-padding w3-text-teal">HOME</a>
+          <a href="#" class="w3-padding">ABOUT</a>
+          <a href="#" class="w3-padding">CONTACT</a>
+        {% endblock %}
+        <div class="w3-section w3-padding-top w3-large">
+          <a href="#" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block"><i class="fa fa-facebook-official"></i></a>
+          <a href="#" class="w3-hover-white w3-hover-text-red w3-show-inline-block"><i class="fa fa-pinterest-p"></i></a>
+          <a href="#" class="w3-hover-white w3-hover-text-light-blue w3-show-inline-block"><i class="fa fa-twitter"></i></a>
+          <a href="#" class="w3-hover-white w3-hover-text-grey w3-show-inline-block"><i class="fa fa-flickr"></i></a>
+          <a href="#" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block"><i class="fa fa-linkedin"></i></a>
+        </div>
+      </nav>
 
-            {% block header %}
-              <h1 style="background-color:black;color:white;text-align:center;padding:5px;">Game Shop</h1>
-            {% endblock %}
+      <!-- Overlay effect when opening sidenav on small screens -->
+      <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu"></div>
 
+      <!-- !PAGE CONTENT! -->
+      <div class="w3-main" style="margin-left:300px">
+
+        <!-- Header -->
+        <header class="w3-container">
+          <h1><font color="#33cc33"><b>GameShop</b></font></h1>
+          <div class="w3-section w3-bottombar w3-padding-16">
+            <span class="w3-margin-right">Filter:</span>
+            <button class="w3-btn">ALL</button>
+            <button class="w3-btn w3-white"><i class="fa fa-diamond w3-margin-right"></i>Design</button>
+            <button class="w3-btn w3-white w3-hide-small"><i class="fa fa-photo w3-margin-right"></i>Photos</button>
+            <button class="w3-btn w3-white w3-hide-small"><i class="fa fa-map-pin w3-margin-right"></i>Art</button>
+          </div>
+        </header>
+
+        <!-- Photo Grid-->
+        <div class="row small-up-2 medium-up-3 large-up-4">
+          {% block grid %}
+          <!--
+          <div class="column">
+            <img src="img_mountains.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+            <div class="w3-container w3-white">
+              <p><b>Lorem Ipsum</b></p>
+              <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+            </div>
+          </div>
+          -->
+          {% endblock %}
         </div>
 
-        <div class="nav">
-
-            {% block nav %}
-
-            {% endblock %}
-
+        <!-- Pagination -->
+        <div class="w3-center w3-padding-32">
+          <ul class="w3-pagination">
+            <li><a class="w3-black" href="#">1</a></li>
+            <li><a class="w3-hover-black" href="#">2</a></li>
+            <li><a class="w3-hover-black" href="#">3</a></li>
+            <li><a class="w3-hover-black" href="#">4</a></li>
+            <li><a class="w3-hover-black" href="#">&raquo;</a></li>
+          </ul>
         </div>
 
-        <div class="section">
+        <!-- Footer -->
+        <footer class="w3-container w3-padding-32 w3-white">
 
-            {% block section %}
+        </footer>
 
-            {% endblock %}
+      <!-- End page content -->
+      </div>
 
-        </div>
+      <script>
+        // Script to open and close sidenav
+        function w3_open() {
+          document.getElementsByClassName("w3-sidenav")[0].style.display = "block";
+          document.getElementsByClassName("w3-overlay")[0].style.display = "block";
+        }
 
-        <div class="footer">
-
-            {% block footer %}
-              Copyright © habijabi.com
-            {% endblock %}
-
-        </div>
-
-        <!-- {% include "javascript.html" %} -->
-
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+        function w3_close() {
+          document.getElementsByClassName("w3-sidenav")[0].style.display = "none";
+          document.getElementsByClassName("w3-overlay")[0].style.display = "none";
+        }
+        </script>
+        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script src="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+        <script>
+              $(document).foundation();
+            </script>
     </body>
+
 </html>
