--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -43,7 +43,7 @@
           <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding" title="close menu">
           <i class="fa fa-remove"></i>
           </a>
-          <img src='{% static "img/GS.png" %}' alt="logo" style="width:45%;" class="w3-round"><br><br>
+          <img src='{% static "img/GS.png" %}' style="width:45%;" class="w3-round"><br><br>
           <h4 class="w3-padding-0"><font color="#33cc33"><b>GameShop</b></font></h4>
           <!--<p class="w3-text-grey">Template by W3.CSS</p>-->
         </div>
@@ -69,6 +69,8 @@
 
         <!-- Header -->
         <header class="w3-container">
+          <a href="#"><img src='{% static "img/GS.png" %}' style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
+          <span class="w3-opennav w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
           <h1><font color="#33cc33"><b>GameShop</b></font></h1>
           <div class="w3-section w3-bottombar w3-padding-16">
             <span class="w3-margin-right">Filter:</span>
