--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,13 +6,13 @@
 {% block grid %}
 {% for obj in object_list %}
   <div class="column">
-    <img src="{{obj.image.url}}" alt="Norway" style="width:100%" class="w3-hover-opacity">
+    <img src="{{obj.image.url}}" alt='{{obj.title}} cover' style="width:100%" class="w3-hover-opacity">
     <div class="w3-container w3-white">
       <b>Title: </b>{{ obj.title }}<br>
       <b>Developer: </b>{{ obj.developer }}<br>
       <b>Publisher: </b>{{ obj.publisher }}<br>
-      <b>Price: </b>{{ obj.price }}$<br>
-      <b>Category: </b>{{ obj.category }}<br>
+      <b>Price: </b>{{ obj.get_price }}<br>
+      <b>Category: </b>{{ obj.category__title }}<br>
       <b>Avilable quantity: </b>{{ obj.quantity }}<br>
     </div>
   </div>
