models.py changed

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
       <b>Developer: </b>{{ obj.developer }}<br>
       <b>Publisher: </b>{{ obj.publisher }}<br>
       <b>Price: </b>{{ obj.get_price }}<br>
-      <b>Category: </b>{{ obj.category__title }}<br>
+      <b>Category: </b>{{ obj.get_category_title }}<br>
       <b>Avilable quantity: </b>{{ obj.quantity }}<br>
     </div>
   </div>
