--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -72,12 +72,27 @@
           <a href="#"><img src='{% static "img/GS.png" %}' style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
           <span class="w3-opennav w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
           <h1><font color="#33cc33"><b>GameShop</b></font></h1>
+          <!-- search bar
+              <div id="tfheader">
+		          <form id="tfnewsearch" method="get" action="http://www.google.com">
+		              <input type="text" class="tftextinput" name="q" size="21" maxlength="20">
+                  <input type="submit" value="search" class="tfbutton">
+		          </form>
+	            <div class="tfclear"></div>
+	        </div>-->
           <div class="w3-section w3-bottombar w3-padding-16">
             <span class="w3-margin-right">Filter:</span>
-            <button class="w3-btn">ALL</button>
-            <button class="w3-btn w3-white"><i class="fa fa-diamond w3-margin-right"></i>Design</button>
-            <button class="w3-btn w3-white w3-hide-small"><i class="fa fa-photo w3-margin-right"></i>Photos</button>
-            <button class="w3-btn w3-white w3-hide-small"><i class="fa fa-map-pin w3-margin-right"></i>Art</button>
+            <button class="w3-btn w3-teal">All</button>
+            <button class="w3-btn w3-green">Action</button>
+            <button class="w3-btn w3-green">Adventure</button>
+            <button class="w3-btn w3-green">Casual</button>
+            <button class="w3-btn w3-green">Indie</button>
+            <button class="w3-btn w3-green">Multiplayer</button>
+            <button class="w3-btn w3-green">Racing</button>
+            <button class="w3-btn w3-green">RPG</button>
+            <button class="w3-btn w3-green">Simulation</button>
+            <button class="w3-btn w3-green">Sports</button>
+            <button class="w3-btn w3-green">Strategy</button>
           </div>
         </header>
 
