--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,21 +4,38 @@
 {% block title %} {{ title }} {% endblock %}
 
 {% block grid %}
-{% for obj in object_list %}
-  <div class="column">
-    <img src="{{obj.image.url}}" alt='{{obj.title}} cover' style="width:100%" >
-    <div class="w3-container w3-white">
-      <b>Title: </b>{{ obj.title }}<br>
-      <b>Developer: </b>{{ obj.developer }}<br>
-      <b>Publisher: </b>{{ obj.publisher }}<br>
-      <b>Price: </b>{{ obj.get_price }}<br>
-      <b>Category: </b>{{ obj.get_category_title }}<br>
-      {% if obj.quantity > 0 %}
-        <b class="w3-green">Avilable</b><br>
-      {% else %}
-        <b class="w3-red">Out of stock</b><br>
-      {% endif %}
+  {% for obj in object_list %}
+    <div class="column">
+      <img src="{{obj.image.url}}" alt='{{obj.title}} cover' style="width:100%" >
+      <div class="w3-container w3-white">
+        <b>Title: </b>{{ obj.title }}<br>
+        <b>Developer: </b>{{ obj.developer }}<br>
+        <b>Publisher: </b>{{ obj.publisher }}<br>
+        <b>Price: </b>{{ obj.get_price }}<br>
+        <b>Category: </b>{{ obj.get_category_title }}<br>
+        {% if obj.quantity > 0 %}
+          <b class="w3-green">Avilable</b><br>
+        {% else %}
+          <b class="w3-red">Out of stock</b><br>
+        {% endif %}
+      </div>
     </div>
-  </div>
-{% endfor %}
-{% endblock %}
+  {% endfor %}
+
+{% endblock %} <!-- end grid -->
+
+{% block pagination %}
+<div class="w3-center w3-padding-32">
+  <ul class="w3-pagination">
+    {% if object_list.has_previous %}
+        <li><a class="w3-hover-gray" href="?{{ page_request_var }}=1">&laquo;</a></li>
+        <li><a class="w3-hover-gray" href="?{{ page_request_var }}={{ object_list.previous_page_number }}">&lt;</a></li>
+    {% endif %}
+    <li><a class="w3-black" href="#">{{ object_list.number }}</a></li>
+    {% if object_list.has_next %}
+        <li><a class="w3-hover-gray" href="?{{ page_request_var }}={{ object_list.next_page_number }}">&gt;</a></li>
+        <li><a class="w3-hover-gray" href="?{{ page_request_var }}={{ object_list.paginator.num_pages }}">&raquo;</a></li>
+    {% endif %}
+  </ul>
+</div>
+{% endblock %} <!-- end pagination -->
