--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -45,13 +45,11 @@
           </a>
           <img src='{% static "img/GS.png" %}' style="width:45%;" class="w3-round"><br><br>
           <h4 class="w3-padding-0"><font color="#33cc33"><b>GameShop</b></font></h4>
-          <!--<p class="w3-text-grey">Template by W3.CSS</p>-->
         </div>
+
         {% block navContent %}
-          <a href="#" class="w3-padding w3-text-teal">HOME</a>
-          <a href="#" class="w3-padding">ABOUT</a>
-          <a href="#" class="w3-padding">CONTACT</a>
         {% endblock %}
+
         <div class="w3-section w3-padding-top w3-large">
           <a href="#" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block"><i class="fa fa-facebook-official"></i></a>
           <a href="#" class="w3-hover-white w3-hover-text-red w3-show-inline-block"><i class="fa fa-pinterest-p"></i></a>
@@ -80,33 +78,13 @@
 		          </form>
 	            <div class="tfclear"></div>
 	        </div>-->
-          <div class="w3-section w3-bottombar w3-padding-16">
-            <button class="w3-btn w3-teal">All</button>
-            <button class="w3-btn w3-green">Action</button>
-            <button class="w3-btn w3-green">Adventure</button>
-            <button class="w3-btn w3-green">Arcade</button>
-            <button class="w3-btn w3-green">Indie</button>
-            <button class="w3-btn w3-green">Multiplayer</button>
-            <button class="w3-btn w3-green">Racing</button>
-            <button class="w3-btn w3-green">RPG</button>
-            <button class="w3-btn w3-green">Simulation</button>
-            <button class="w3-btn w3-green">Sports</button>
-            <button class="w3-btn w3-green">Strategy</button>
-          </div>
+          {% block filter %}
+          {% endblock %}
         </header>
 
         <!-- Photo Grid-->
         <div class="row small-up-2 medium-up-3 large-up-4">
           {% block grid %}
-          <!--
-          <div class="column">
-            <img src="img_mountains.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-            <div class="w3-container w3-white">
-              <p><b>Lorem Ipsum</b></p>
-              <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-            </div>
-          </div>
-          -->
           {% endblock %}
         </div>
 
@@ -121,6 +99,9 @@
 
       <!-- End page content -->
       </div>
+
+      {% block script %}
+      {% endblock %}
 
       <script>
         // Script to open and close sidenav
