--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -186,13 +186,13 @@
 <div class="w3-center w3-padding-32">
   <ul class="w3-pagination">
     {% if object_list.has_previous %}
-        <li><a class="w3-hover-gray" href="?page=1">&laquo;</a></li>
-        <li><a class="w3-hover-gray" href="?page={{ object_list.previous_page_number }}">&lt;</a></li>
+        <li><a class="w3-hover-gray" href="?{{ filter_var }}=1">&laquo;</a></li>
+        <li><a class="w3-hover-gray" href="?{{ filter_var }}={{ object_list.previous_page_number }}">&lt;</a></li>
     {% endif %}
     <li><a class="w3-black" href="#">{{ object_list.number }}</a></li>
     {% if object_list.has_next %}
-        <li><a class="w3-hover-gray" href="?page={{ object_list.next_page_number }}">&gt;</a></li>
-        <li><a class="w3-hover-gray" href="?page={{ object_list.paginator.num_pages }}">&raquo;</a></li>
+        <li><a class="w3-hover-gray" href="?{{ filter_var }}={{ object_list.next_page_number }}">&gt;</a></li>
+        <li><a class="w3-hover-gray" href="?{{ filter_var }}={{ object_list.paginator.num_pages }}">&raquo;</a></li>
     {% endif %}
   </ul>
 </div>
