--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -14,17 +14,17 @@
 
 {% block grid %}
 <br>
-<h1>{{ object.title }}</h1>
+<h1 class="w3-padding">{{ object.title }}</h1>
 <div class="w3-row">
   <div class="w3-container w3-half">
     <img src="{{object.image.url}}" class="w3-round" alt='{{obj.title}} cover' style="width:60%">
   </div>
-  <div class="w3-container w3-half">
-    <b>Title: </b>{{ object.title }}<br>
-    <b>Developer: </b>{{ object.developer }}<br>
-    <b>Publisher: </b>{{ object.publisher }}<br>
-    <b>Price: </b>{{ object.get_price }}<br>
-    <b>Category: </b>{{ object.get_category_title }}<br>
+  <div class="w3-container w3-half" style="font-size:20px">
+    <b>Developer: </b>{{ object.developer }}<br><br>
+    <b>Publisher: </b>{{ object.publisher }}<br><br>
+    <b>Price: </b>{{ object.get_price }}<br><br>
+    <b>Category: </b>{{ object.get_category_title }}<br><br>
+    <b>Rating: </b>{{ object.avg_rating }}<br><br>
   </div>
 </div>
 {% endblock %}
