--- a/src/templates/stuff.html
+++ b/src/templates/stuff.html
@@ -1,40 +1,30 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
-{% block title %} {{ title }} {% endblock %}
+{% block title %} Stuff {% endblock %}
 
 {% block filter %}
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
 {% endblock %}
 
 {% block grid %}
 <div class="w3-row-padding">
   <div class="w3-col w3-container s12 m6 l6">
     <h2 class="w3-center">Add a new product</h2>
-    <form action="" method="get">
-      <label><b>Title: </b></label>
-      <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Title">
-
-      <label><b>Title: </b></label>
-      <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Title">
-
-      <label><b>Title: </b></label>
-      <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Title">
-
-      <label><b>Title: </b></label>
-      <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Title">
-
-      <label><b>Title: </b></label>
-      <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Title">
-
-      <label><b>Title: </b></label>
-      <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Title">
-
-      <label><b>Title: </b></label>
-      <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Title">
+    <form action="{{ products.views.add_product }}" method="post">{% csrf_token %}
+      {{ form.as_p }}
+      <input class="w3-btn w3-green" type="submit" value="Add product">
     </form>
   </div>
   <div class="w3-col w3-container s12 m6 l6">
     <h2 class="w3-center">Restock an existing product</h2>
   </div>
 </div>
+
 {% endblock %}
