--- a/src/templates/stuff.html
+++ b/src/templates/stuff.html
@@ -22,8 +22,14 @@
       <input class="w3-btn w3-green" type="submit" value="Add product">
     </form>
   </div>
+
   <div class="w3-col w3-container s12 m6 l6">
     <h2 class="w3-center">Restock an existing product</h2>
+    <form action="{{ products.views.add_product }}" method="post">{% csrf_token %}
+        {{ form2.as_p }}
+        Add ammount:<input type="number" name="add">
+        <input class="w3-btn w3-green" type="submit" value="Submit">
+    </form>
   </div>
 </div>
 
