stuff section complete

--- a/src/templates/stuff.html
+++ b/src/templates/stuff.html
@@ -4,33 +4,12 @@
 {% block title %} Stuff {% endblock %}
 
 {% block filter %}
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
 {% endblock %}
 
 {% block grid %}
 <div class="w3-row-padding">
-  <div class="w3-col w3-container s12 m6 l6">
-    <h2 class="w3-center">Add a new product</h2>
-    <form action="{{ products.views.add_product }}" method="post">{% csrf_token %}
-      {{ form.as_p }}
-      <input class="w3-btn w3-green" type="submit" value="Add product">
-    </form>
-  </div>
-
-  <div class="w3-col w3-container s12 m6 l6">
-    <h2 class="w3-center">Restock an existing product</h2>
-    <form action="{{ products.views.add_product }}" method="post">{% csrf_token %}
-        {{ form2.as_p }}
-        Add ammount:<input type="number" name="add">
-        <input class="w3-btn w3-green" type="submit" value="Submit">
-    </form>
-  </div>
+  <a href="/stuff/add_product/" class="w3-btn w3-green" role="button">Add new product</a>
+  <a href="/stuff/restock/" class="w3-btn w3-green" role="button">Restock existing product</a>
 </div>
 
 {% endblock %}
