purchase is not working

--- a/src/templates/add_product.html
+++ b/src/templates/add_product.html
@@ -1,7 +1,7 @@
 {% extends "rbase.html" %}
 {% load staticfiles %}
 
-{% block title %} Stuff {% endblock %}
+{% block title %} Staff {% endblock %}
 
 {% block filter %}
 {% if messages %}
