--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -184,10 +184,10 @@
         <img src="{{obj.image.url}}" alt='{{obj.title}} cover' style="width:100%">
         <div class="w3-container w3-white">
           <b>Title: </b>{{ obj.title }}<br>
-          <b>Developer: </b>{{ obj.developer }}<br>
+          <!--<b>Developer: </b>{{ obj.developer }}<br>
           <b>Publisher: </b>{{ obj.publisher }}<br>
           <b>Category: </b>{{ obj.get_category_title }}<br>
-          <b>Rating: </b>{{ obj.avg_rating }}<br>
+          <b>Rating: </b>{{ obj.avg_rating }}<br>-->
           <b>Price: </b>{{ obj.get_price }}<br>
         </div>
         <div class="w3-row">
